force-app/main/default/objects/Soccer_Team__c/Soccer_Team__c.object-meta.xml
<CustomObject>
    <label>Soccer Team</label>
    <nameField>
        <label>Soccer Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Soccer Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>