force-app/main/default/objects/Soccer_Team__c/fields/First_Half_Corners_Given_Last_10_Matches__c.field-meta.xml
<CustomField>
    <fullName>First_Half_Corners_Given_Last_10_Matches__c</fullName>
    <label>First Half Corners Given Last 10 Matches</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>