force-app/main/default/objects/Soccer_Team__c/fields/Number_Of_Games__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Games__c</fullName>
    <label>Number Of Games</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>