force-app/main/default/objects/Soccer_Team__c/fields/Second_Half_Corners__c.field-meta.xml
<CustomField>
    <fullName>Second_Half_Corners__c</fullName>
    <formula>Second_Half_Corners_Given__c +  Second_Half_Corners_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Half Corners</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>