force-app/main/default/objects/Soccer_Team__c/fields/Second_Half_Corners_Given__c.field-meta.xml
<CustomField>
    <fullName>Second_Half_Corners_Given__c</fullName>
    <label>Second Half Corners Given</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>