force-app/main/default/objects/Soccer_Team__c/fields/Second_Half_Corners_Given_Last_5_Matches__c.field-meta.xml
<CustomField>
    <fullName>Second_Half_Corners_Given_Last_5_Matches__c</fullName>
    <label>Second Half Corners Given Last 5 Matches</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>