force-app/main/default/objects/Soccer_Team__c/fields/Second_Half_Corners_Taken_Last_10__c.field-meta.xml
<CustomField>
    <fullName>Second_Half_Corners_Taken_Last_10__c</fullName>
    <label>Second Half Corners Taken Last 10</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>