force-app/main/default/objects/Soccer_Team__c/fields/Total_Corners__c.field-meta.xml
<CustomField>
    <fullName>Total_Corners__c</fullName>
    <formula>First_Half_Corners_Given__c +   First_Half_Corners_Taken__c +  Second_Half_Corners_Given__c +  Second_Half_Corners_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Corners</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>